--- a/placeholder-shown-可操作的‘占位符’.html
+++ b/placeholder-shown-可操作的‘占位符’.html
@@ -45,9 +45,9 @@
       color: #a2a9b6;
       padding: 0 2px;
       transform-origin: 0 0;
-      pointer-events: none;
-      /* 重要：让其可被点透 */
       transition: all .25s;
+      /* 重要：让其可被点透 */
+      pointer-events: none;
     }
 
     /* 关键部分 */
@@ -58,7 +58,6 @@
       color: #2486ff;
       transform: scale(0.75) translate(-2px, -26px);
     }
-
 
     /* 线框交互下有个白色背景 */
     .input-outline~.input-label {
@@ -82,14 +81,11 @@
   <div class="code">
     <h4>作用:</h4>
 
-      相当于让input拥有了一个if判断，鼠标是否进入来决定是否增加这个伪类
+    让input拥有了一个if判断，内部是否有输入值。
 
   </div>
   <br>
-  
-  <h4>兼容性:</h4>
-  <iframe width="800" height="500" src="https://www.caniuse.com/?search=placeholder-shown" frameborder="0"></iframe>
-  
+
   <h4>示例1:</h4>
   <div>这是我们项目中常用的input交互：</div><br>
 
@@ -99,6 +95,13 @@
       <label for='inputRef' id="inputLabel" class="input-label">请输入邮箱</label>
     </div>
   </div>
+
+  <br>
+  <br>
+  <br>
+  <h4>兼容性:</h4>
+  <iframe width="800" height="500" src="https://www.caniuse.com/?search=placeholder-shown" frameborder="0"></iframe>
+
 
   <script>
 
