--- a/scroll-snap 优化滚动体验.html
+++ b/scroll-snap 优化滚动体验.html
@@ -109,7 +109,7 @@
 	<br>
 	<br>
 	<h4>兼容性:</h4>
-	<iframe width="800" height="500" src="https://www.caniuse.com/?search=overscroll-behavior" frameborder="0"></iframe>
+	<iframe width="800" height="500" src="https://www.caniuse.com/css-snappoints" frameborder="0"></iframe>
 
 	<br>
 	<br>
