--- a/min() max() clamp()-可计算的尺寸.html
+++ b/min() max() clamp()-可计算的尺寸.html
@@ -7,42 +7,35 @@
   <title></title>
   <link rel="stylesheet" href="./style/common.css">
   <style>
-    html,
-    body {
-      height: 100%;
-      overflow: hidden;
-    }
-    
-    .box{
+    .box {
       border: #f50 solid;
       padding: 10px;
       text-align: center;
     }
-    .content{
+
+    .content {
       height: 50vh;
     }
-    button{
+
+    button {
       height: 50px;
     }
 
-    .min{
-      /* width: 1000px; */
-      /* max-width: 100%; */
-      width: min(500px, 100%);
-    }
-    .max{
-      /* width: 100%; */
-      /* min-width: 1000px; */
-      width: max(500px, 100%);
+    .box1 .btn-wrap {
+      text-align: center;
     }
 
-    .clamp{
-      /* min-width: 500px;
-      max-width: 100%;
-      width: 50vw; */
-      width: clamp(500px, 50vw, 100%);
+    .box1 .min-btn {
+      width: min(1024px, 100%);
     }
 
+    .box2 .btn-wrap {
+      text-align: center;
+    }
+
+    .box2 .clamp-btn {
+      width: clamp(400px, 50vw, 800px);
+    }
   </style>
 </head>
 
@@ -51,19 +44,90 @@
   <div class="code">
     <h4>语法:</h4>
     <pre>
-      min(expression [, expression])
-      max(expression [, expression])
-      clamp(min, val, max)
+      min(expression [, expression])    支持一个或多个表达式，最小的表达式的值作为返回值
+      max(expression [, expression])    支持一个或多个表达式，最大的表达式的值作为返回值
+      clamp(min, val, max)              取中间值，如果VAL在MIN和MAX范围之间，则使用VAL作为函数返回值；如果VAL大于MAX，则使用MAX作为返回值；如果VAL小于MIN，则使用MIN作为返回值。  
     </pre>
   </div>
   <br>
   <h4>示例1:</h4>
-  <div class="box">
-    <div class="content">这是一个简单的可兼容手机端的页面</div>
-    <button class="min">我是一个有上限无底线的按钮</button><br>
-    <button class="max">我是一个有底线无上限的按钮</button><br>
-    <button class="clamp">我是一个有底线和上限的按钮</button>
+  <div class="box1">
+    <p>以前我们想实现在PC浏览器1024像素，在移动端100%宽度，大概都会这样：</p>
+    <div class="code">
+      <pre>
+
+        .button {
+          width: 1024px;
+          max-width: 100%;
+        }
+      </pre>
+    </div>
+    <p>现在则是：</p>
+    <div class="btn-wrap">
+      <button class="min-btn" id="min-btn">我是一个宽度为min(1024px, 100%)按钮, width: <span
+          id="min-btn-width"></span></button><br>
+    </div>
   </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="box2">
+    <h4>示例2:</h4>
+    <p>以前我们想实现在一个元素弹性尺寸，并且有最大与最小值，大概都会这样：</p>
+    <div class="code">
+      <pre>
+
+        .button {
+          width: 500vm;
+          min-width: 400px
+          max-width: 800px;
+        }
+      </pre>
+    </div>
+    <p>现在则是：</p>
+    <div class="btn-wrap">
+      <button class="clamp-btn" id="clamp-btn">我是一个宽度为clamp(400px, 50vw, 800px)按钮, width: <span
+        id="clamp-btn-width"></span></button><br>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h4>兼容性: </h4>
+  <iframe width="800" height="500" src="https://www.caniuse.com/?search=min()%2C%20max()%20and%20clamp()"
+    frameborder="0"></iframe>
+  <br>
+  <br>
+  <p>排除兼容性，相比scss、less等中的min()、max()函数来说，原生min()、max()、clamp()可支持不同类型尺寸混用</p>
+  <br>
+  <br>
+
+  <script>
+    var minBtn = document.querySelector('#min-btn');
+    var minBtnWidth = document.querySelector('#min-btn-width');
+    minBtnWidth.innerHTML = getComputedStyle(minBtn).width;
+
+    var clampBtn = document.querySelector('#clamp-btn');
+    var clampBtnWidth = document.querySelector('#clamp-btn-width');
+    clampBtnWidth.innerHTML = getComputedStyle(clampBtn).width;
+
+    window.onresize = function () {
+      minBtnWidth.innerHTML = getComputedStyle(minBtn).width;
+      clampBtnWidth.innerHTML = getComputedStyle(clampBtn).width;
+    }
+
+  </script>
+
 </body>
 
 </html>
