--- a/scroll-behavior-实现过渡滚动.html
+++ b/scroll-behavior-实现过渡滚动.html
@@ -17,10 +17,6 @@
       padding: 0;
     }
 
-    .box {
-      height: 120vh;
-    }
-
     .top-btn img {
       width: 100px;
     }
@@ -59,7 +55,7 @@
     .dot {
       width: 100%;
       text-align: center;
-
+      margin-top: 10px;
     }
 
     .dot label {
@@ -68,9 +64,9 @@
       display: inline-block;
       background-color: #eee;
       border-radius: 50%;
-      height: 20px;
-      width: 20px;
-      line-height: 20px;
+      height: 30px;
+      width: 30px;
+      line-height: 10px;
     }
   </style>
 </head>
@@ -80,21 +76,34 @@
 
     <h4>语法:</h4>
     <pre>
-      scroll-behavior: auto;
-      scroll-behavior: smooth;
+
+      scroll-behavior: auto;     默认值无效果
+      scroll-behavior: smooth;   平滑效果
+
+      就这么简单，强大而实用
     </pre>
   </div>
   <br>
+  <br>
+  <br>
   <h4>示例1:</h4>
+  <div>无js轮播：</div><br>
+
   <div class="swiper">
     <ul class="swiper-content">
-      <li><input id="one" readonly><img
-          src="https://img.zcool.cn/community/01529459aa26f6a8012028a91f76c5.jpg@1280w_1l_0o_100sh.jpg" alt=""></li>
-      <li><input id="two" readonly><img
-          src="https://img.zcool.cn/community/0120c659aa2710a8012028a94697ec.jpg@1280w_1l_0o_100sh.jpg" alt=""></li>
-      <li><input id="three" readonly><img
-          src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1597050432325&di=92675955fe2b3b4419e09713892065a3&imgtype=0&src=http%3A%2F%2Fwww.luoteng.shop%2F2018%2F11%2F8%2F11%2F32085217.jpg"
-          alt=""></li>
+      <li>
+        <input id="one" readonly>
+        <img src="https://img.zcool.cn/community/01529459aa26f6a8012028a91f76c5.jpg@1280w_1l_0o_100sh.jpg" alt="">
+      </li>
+      <li>
+        <input id="two" readonly>
+        <img src="https://img.zcool.cn/community/0120c659aa2710a8012028a94697ec.jpg@1280w_1l_0o_100sh.jpg" alt="">
+      </li>
+      <li>
+        <input id="three" readonly>
+        <img src="https://img.zcool.cn/community/01529459aa26f6a8012028a91f76c5.jpg@1280w_1l_0o_100sh.jpg"
+          alt="">
+      </li>
     </ul>
     <div class="dot">
       <label for="one">1</label>
@@ -103,12 +112,32 @@
     </div>
   </div>
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
   <div class="box"></div>
   <h4>示例2:</h4>
+  <div>回到顶部：</div><br>
 
   <a href='#header' class='top-btn'><img
       src="https://ss2.bdstatic.com/70cFvnSh_Q1YnxGkpoWK1HF6hhy/it/u=2592293273,4092150763&fm=26&gp=0.jpg" alt=""></a>
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <div></div>
+
+	<h4>兼容性: 窃以为，因为是增强交互体验，所以可以毫不犹豫的使用起来，而不必管它的兼容性如何。</h4>
+	<iframe width="800" height="500" src="https://www.caniuse.com/css-scroll-behavior" frameborder="0"></iframe>
+  <br>
+  <br>
   <br>
   <br>
 </body>
