--- a/css变量的使用-超简单的实现进度条.html
+++ b/css变量的使用-超简单的实现进度条.html
@@ -30,7 +30,7 @@
 		}
 
 		:root{
-			--color: red;
+			--color: red;		/*声明变量*/
 		}
 
 		.box2{
@@ -74,7 +74,7 @@
 	<br>
 	<div class="box">
 		<div>进度1</div>
-		<div class='bar' style="--percent: 30"></div>
+		<div class='bar' style="--percent: 30"></div>		<!-- 声明变量 -->
 		<div>进度2</div>
 		<div class='bar' style="--percent: 60"></div>
 		<div>进度3</div>
