--- a/overscroll-behavior-让滚动不影响父级页面滚动.html
+++ b/overscroll-behavior-让滚动不影响父级页面滚动.html
@@ -81,7 +81,7 @@
 	<h4>示例1:</h4>
   <div>基本用法：</div><br>
 
-  <div class="box1">
+  <div class="box1" id="scroll_box">
     <div>
 			<h3>Redmi K30 至尊纪念版实际体验如何？</h3>
 			<p><b>屏幕</b>：最大的亮点在于加入了120HZ，对于像答主这样没用过120HZ手机的用户，配合MIUI12流畅的动画，在不掉帧的时候感知极强，但也仅限于和其他手机对比，跟iPad Pro的120HZ比起来还差得多，一分钱一分货，这点没什么可挑剔的，不是全局120HZ，官方叫做：自适应帧率，为了省电，功过参半吧。看网上说这条的也不少，其实这里还是建议要求不高的用户平时使用都改成60hz，在玩支持高帧率游戏的时候在开120hz，掉帧版的120hz体验不如60hz，哪怕只有偶尔的一两个瞬间掉帧，而且120hz真的真的是太费电了。（对比屏幕尺寸相同，电池大小相同的redmi note8 pro得出的结论）</p>
