--- a/scroll-snap 滚动自动定位效果.html
+++ b/scroll-snap 滚动自动定位效果.html
@@ -14,9 +14,10 @@
 			scroll-snap-type: y mandatory;
 			overflow-x: hidden;
 			overflow-y: auto;
-			overscroll-behavior: none;
+			overscroll-behavior: none;				/* 滚动不影响body */
 			margin-top: 20px;
 		}
+
 
 		.box1 img {
 			width: 100%;
@@ -46,6 +47,7 @@
 
 <body>
 	<div class="code">
+		<div>Snap是CSS中一个独立的模块，可以让网页容器滚动停止的时候，自动平滑定位到指定元素的指定位置，包含scroll-*以及scroll-snap-*等<br>注意：Scroll Snap的作用不是平滑滚动，而是元素定位增强。</div>
 		<h4>语法:</h4>
 		<pre>
 
@@ -78,7 +80,8 @@
 
 	<h4>示例1:</h4>
 	<div>基本效果：</div><br>
-
+	<div>在实际开发中，如果遇到要求不高的轮播效果，就可以代替使用了<br>
+		</div><br>
 	<button class="mode-btn">start</button><button class="mode-btn">end</button><button	class="mode-btn">center</button>
 	<div class="box1">
 		<img src="./img/1.jpg" alt="">
@@ -92,6 +95,8 @@
 
 	<h4>示例2:</h4>
 	<div>无js全屏滚动：</div><br>
+	<div>之前实现一屏一屏的全屏滚动效果都要借助js库来实现，而现在，无需任何js，只简单几句css就足以实现了。<br>
+		是不是又节省了代码，优化了性能？</div><br>
 
 	<div class="box2">
 		<div class="item" style="background-color: chartreuse;">1</div>
