--- a/currentColor 被忽略的超好用变量.html
+++ b/currentColor 被忽略的超好用变量.html
@@ -9,7 +9,7 @@
 	<!-- <link rel="stylesheet" href="http://at.alicdn.com/t/font_2096440_cr04x0ngueh.css"> -->
 	<style>
 		.box1 {
-			color:#8090f9;
+			color:#7b7b7b;
 		}
 
 		.box1 img {
@@ -80,7 +80,8 @@
 	<br>
 
 	<h4>示例2:</h4>
-	<div>图文合体变化：</div><br>
+	<div>图文合体变化：<br>如果是以往，要实现这个效果，当有多个这样的图标，用scss的话就得创建多个变量，给文字赋值一次，还要给svg赋值一次<br>借助currentColor, hover时候的颜色变化，我们根本无需关心，因为无论是border, background, 还是box-shadow都使用currentColor作为图形颜色，hover时候自然就会变成我们想要的文字颜色
+	</div><br>
 
 	<div class="box2">
 
@@ -107,7 +108,7 @@
 	</div>
 	<br>
 	<br>
-
+	
 	<br>
 	<br>
 
