--- a/min() max() clamp()-可计算的尺寸.html
+++ b/min() max() clamp()-可计算的尺寸.html
@@ -101,14 +101,15 @@
   <br>
   <br>
   <br>
+  
+  <p>排除兼容性来说，相比scss、less等中的min()、max()函数来说，原生min()、max()、clamp()可支持不同类型尺寸混用，因此更为强大</p>
+  <br>
+  <br>
   <br>
   <br>
   <h4>兼容性: </h4>
   <iframe width="800" height="500" src="https://www.caniuse.com/?search=min()%2C%20max()%20and%20clamp()"
     frameborder="0"></iframe>
-  <br>
-  <br>
-  <p>排除兼容性，相比scss、less等中的min()、max()函数来说，原生min()、max()、clamp()可支持不同类型尺寸混用</p>
   <br>
   <br>
 
