--- a/placeholder-shown-可操作的‘占位符’.html
+++ b/placeholder-shown-可操作的‘占位符’.html
@@ -88,6 +88,8 @@
 
   <h4>示例1:</h4>
   <div>这是我们项目中常用的input交互：</div><br>
+  <div>对比我们自己项目中的输入框，仔细观察可以看到一个明显的区别</div><br>
+  <div>就是反应速度与流畅度</div><br>
 
   <div class="box">
     <div class="input-outline-x">
@@ -95,7 +97,11 @@
       <label for='inputRef' id="inputLabel" class="input-label">请输入邮箱</label>
     </div>
   </div>
-
+  <br>
+  <br>
+  <br>
+  <div>其他类似样式：</div>
+  <img src="https://image.zhangxinxu.com/image/blog/201812/placeholder-shown-by-zxx.gif" alt="">
   <br>
   <br>
   <br>
