--- a/scroll-snap 滚动自动定位效果.html
+++ b/scroll-snap 滚动自动定位效果.html
@@ -80,7 +80,7 @@
 
 	<h4>示例1:</h4>
 	<div>基本效果：</div><br>
-	<div>在实际开发中，如果遇到要求不高的轮播效果，就可以代替使用了<br>
+	<div>在实际开发中，如果遇到类似带有吸附的定位效果，就可以派上用场了<br>
 		</div><br>
 	<button class="mode-btn">start</button><button class="mode-btn">end</button><button	class="mode-btn">center</button>
 	<div class="box1">
@@ -97,7 +97,9 @@
 	<div>无js全屏滚动：</div><br>
 	<div>之前实现一屏一屏的全屏滚动效果都要借助js库来实现，而现在，无需任何js，只简单几句css就足以实现了。<br>
 		是不是又节省了代码，优化了性能？</div><br>
+	<div>仔细观察这里的滚动效果，不仅带有阻尼，而且很贴近真实操作手感</div><br>
 
+	
 	<div class="box2">
 		<div class="item" style="background-color: chartreuse;">1</div>
 		<div class="item" style="background-color:chocolate;">2</div>
