--- a/shape-outside 实现文字环绕效果.html
+++ b/shape-outside 实现文字环绕效果.html
@@ -260,49 +260,43 @@
 			<br>
 
 			<h4>示例4:</h4>
-			<div>Shapes实现元素滚动自动环绕iPhone X头部刘海效果<br></div>
+			<div>Shapes实现元素滚动自动环绕iPhone X头部刘海效果<br><br></div>
 
 			<div class="demo">
 				<i class="liuhai"></i>
 
 				<div id="box2" class="box2">
 					<i id="shape100" class="shape100"
-						style="height: 1044px; shape-outside: polygon(0px 0px, 0px 714px, 16px 718px, 30px 730px, 30px 878px, 16px 890px, 0px 894px, 0px 0px);"></i>
+						style="height: 500px; shape-outside: polygon(0px 0px, 0px 714px, 16px 718px, 30px 730px, 30px 878px, 16px 890px, 0px 894px, 0px 0px);"></i>
 					<div class="content">
 						<ul>
-							<li>为了防止看花眼</li>
-							<li>我就手动敲下面的文字</li>
-							<li>原本我偷懒</li>
-							<li>直接就是列表1，列表2</li>
-							<li>后来测试发现不行</li>
-							<li>内容太接近</li>
-							<li>滚动时候</li>
-							<li>无法准确感受到靠近效果</li>
-							<li>这样是不行的</li>
-							<li>做东西就要精益求精</li>
-							<li>demo页面也应如此</li>
-							<li>然后这里的刘海形状只是近似</li>
-							<li>两个圆角要模拟</li>
-							<li>需要更细致的shape-outside设置</li>
-							<li>这里仅仅使用两个转角点表示</li>
-							<li>而且为了和后面的内容有间隙</li>
-							<li>shape区域右侧</li>
-							<li>刻意扩大了大约5像素</li>
-							<li>现在看到的刘海</li>
-							<li>是覆盖上面的一个图</li>
-							<li>实际生效的是后面浮动的shape</li>
-							<li>在iOS 10.2之前还需要webkit</li>
-							<li>私有前缀</li>
-							<li>因此，实际代码还需要webkit</li>
-							<li>Chrome可以不需要</li>
-							<li>然后此功能需要JS配合</li>
-							<li>只能对内联信息进行跟随控制</li>
-							<li>理论上还可以使用CSS region实现</li>
-							<li>但没有这个方法容易理解</li>
+							<li>有一天</li>
+							<li>产品经理拿出一部手机</li>
+							<li>正好是长者齐刘海的iPhoneX</li>
+							<li>他义正言辞的对你说</li>
+							<li>用户会横向浏览网页</li>
+							<li>这个时候刘海挡住了网页中部分文字</li>
+							<li>请找一个完美的适配方案</li>
+							<li>让用户能够全屏浏览并且不被刘海挡住文字</li>
+							<li>你看着产品经理目瞪狗呆</li>
+							<li>竟无力反驳</li>
+							<li>又对着iPhoneX一筹莫展</li>
+							<li>你在想</li>
+							<li>为什么手机都能长刘海</li>
+							<li>而你的发际线却越来越高</li>
+							<li>生活真艰难。。。</li>
+							<li>。。。。</li>
 						</ul>
 					</div>
 				</div>
 			</div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
 			<br>
 			<h4>兼容性:</h4>
 			<iframe width="800" height="500" src="https://www.caniuse.com/shape-outside" frameborder="0"></iframe>
