--- a/实现Sticky Footer布局的 6 种方式.html
+++ b/实现Sticky Footer布局的 6 种方式.html
@@ -13,7 +13,7 @@
         width: 375px;
         height: 480px;
         border: 3px solid #ddd;
-        overflow-y: scroll;
+        overflow-y: auto;
         padding: 10px;
         overscroll-behavior: contain;
         padding-top: 0;
@@ -48,10 +48,11 @@
       <li>
         <h3>flex方式</h3>
         <div>
-          .main { display: flex; flex-direction: column; } .content { flex: 1;
-          }<br />
+          .main { display: flex; flex-direction: column; }<br />
+          .content { flex: 1;}<br />
           一定要注意在flex容器中
-          .content如果设置为明确的width或height是不会有效的，要么设置min-height要么自动撑满才能决定自己真正的尺寸
+          .content如果设置为明确的width或height是不会有效的，要么设置min-height要么flex:1且靠自动撑满才能决定自己真正的尺寸<br />
+          另外，设置了height:inherit的元素会尽可能的大的继承父容器的高度（不会超过父容器高度也不会强占其他兄弟元素的高度）
         </div>
       </li>
       <li>
